# allowlister-remote

./: .gitattributes  .gitignore  .prettierignore  .release-please-manifest.json  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  biome.jsonc  eslint.config.js  gh-secrets.json  index.html  justfile  knip.json  nx.json  package-lock.json  package.json  playwright.config.ts  release-please-config.json  screencomp.toml  tsconfig.json  vite.config.ts  vitest.config.ts
.claude/: settings.json
.githooks/: pre-push
.github/: pull_request_template.md
.github/workflows/: bench.yml  check.yml  e2e-smoke.yml  pr-title.yml  publish.yml  release-please.yml  visual-docs.yml
app/: page.tsx
app/api/approval-requests/: route.ts
app/api/approval-requests/[id]/decision/: route.ts
app/api/plugin/requests/: route.ts
apps/web/: AGENTS.md  eslint.config.mjs  next.config.ts  playwright.capture.config.ts  playwright.config.ts  project.json  tsconfig.json  vitest.config.ts  vitest.heap.config.ts  vitest.render-cost.config.ts
apps/web/app/: boundaries.test.tsx  error.tsx  global-error.tsx  layout.tsx  not-found.tsx
apps/web/app/api/approval-requests/: route.test.ts
apps/web/app/api/approval-requests/[id]/decision/: route.ts
apps/web/app/api/config/: route.test.ts  route.ts
apps/web/app/api/plugin/requests/: route.ts
apps/web/app/api/plugin/requests/[id]/decision/: route.ts
apps/web/app/offline/: page.tsx
apps/web/e2e/: allowlister-binary.spec.ts  approval-flow.spec.ts  broker-harness.ts  broker-realtime.spec.ts  notifications.spec.ts  pwa.spec.ts  theme.spec.ts
apps/web/public/: manifest.webmanifest  sw.js
apps/web/screenshots/: approval.capture.ts  capture-index.ts  fonts-determinism.conf  global-setup.ts  terminal.capture.ts
apps/web/screenshots/terminal/: prompts.json
apps/web/src/: App.css  App.test.tsx  App.tsx  api.test.ts  api.ts  approval-normalize.test.ts  approval-normalize.ts  approval.test.ts  approval.ts  fixtures.ts  inbox.test.ts  inbox.ts  index.css  types.ts
apps/web/src/components/: broker-setup.tsx  connection-status.tsx  error-screen.test.tsx  error-screen.tsx  theme-toggle.tsx
apps/web/src/components/approval/: detail.tsx  inbox.tsx  shared.tsx  shortcuts.tsx
apps/web/src/components/ui/: badge.tsx  button.tsx  card.tsx  json-view.tsx  kbd.tsx
apps/web/src/lib/: broker-config.test.ts  broker-config.ts  focus-trap.test.tsx  focus-trap.ts  json-highlight.test.ts  json-highlight.ts  keyboard.ts  theme.test.tsx  theme.tsx
apps/web/src/perf/: decision.bench.ts  heap.perf.ts  render-cost.perf.tsx
apps/web/src/pwa/: broker-bridge.test.ts  broker-bridge.ts  manifest.test.ts  register-service-worker.test.tsx  register-service-worker.tsx  service-worker.test.ts
apps/web/src/server/: store.test.ts  store.ts
apps/web/src/test/: broker-fixtures.ts  setup.ts
cli/src/: main.rs
crates/allowlister-remote-broker/: Cargo.toml  project.json
crates/allowlister-remote-broker/benches/: AGENTS.md  protocol.rs  protocol_allocs.rs
crates/allowlister-remote-broker/benches/support/: mod.rs
crates/allowlister-remote-broker/src/: lib.rs  main.rs
crates/allowlister-remote-broker/tests/: mediation.rs
crates/allowlister-remote-daemon/: Cargo.toml  project.json
crates/allowlister-remote-daemon/benches/: AGENTS.md  protocol.rs  protocol_allocs.rs
crates/allowlister-remote-daemon/benches/support/: mod.rs
crates/allowlister-remote-daemon/src/: lib.rs  main.rs
crates/allowlister-remote-daemon/tests/: end_to_end.rs  tls.rs
crates/allowlister-remote-e2e/: Cargo.toml  project.json
crates/allowlister-remote-e2e/src/: lib.rs
crates/allowlister-remote-e2e/tests/: full_chain.rs
crates/allowlister-remote-plugin/: CHANGELOG.md  Cargo.toml  build.rs  project.json
crates/allowlister-remote-plugin/benches/: AGENTS.md  engine.rs  engine_allocs.rs
crates/allowlister-remote-plugin/benches/support/: mod.rs
crates/allowlister-remote-plugin/src/: daemon.rs  lib.rs  main.rs
crates/allowlister-remote-plugin/tests/: daemon_path.rs  plugin_client.rs  terminal_prompt.rs
docs/: notifications.md
docs/design/: realtime-sync.md
docs/design/prototypes/: README.md  broker-proto.mjs  daemon-proto.rs
e2e/: allowlister-binary.spec.ts  approval-flow.spec.ts
pr-26/x86_64/: index.html
pr-97/x86_64/: index.html
public/: manifest.webmanifest
scripts/: bench-instructions.sh  bench.sh  install-broker.sh  profile.sh  record-terminal-prompts.py  serve-web.mjs  session-setup.sh  set-npm-package-version.mjs  setup-check.sh  setup-lib.sh  setup.sh  smoke-e2e-published.sh  smoke-npm-package.sh  smoke-web-package.sh  stage-npm-package.mjs  stage-web-package.mjs  terminal-svg.mjs  web-bench-report.mjs  web-bundle-size.mjs  web-heap.mjs  web-lighthouse.mjs  web-render-cost.mjs
shots/baseline/: x86_64.json  x86_64.sha256
src/: App.css  App.tsx  api.test.ts  api.ts  approval.test.ts  fixtures.ts  types.ts
src/server/: store.ts
