[package]
name = "allowlister-remote"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "allowlister-remote-plugin"
path = "cli/src/main.rs"

[dependencies]
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
