[package]
name = "allowlister-remote-broker"
# Placeholder, like the plugin crate: the real version is the release git tag,
# injected at publish time. Kept at 0.0.0 so Cargo.toml/Cargo.lock never drift.
version = "0.0.0"
edition = "2021"
repository = "https://github.com/nickderobertis/allowlister-remote"

[lib]
name = "allowlister_remote_broker"
path = "src/lib.rs"

[[bin]]
name = "allowlister-remote-broker"
path = "src/main.rs"

[dependencies]
# axum's built-in WebSocket support is the high-performance, bidirectional
# transport for both broker edges (service worker <-> broker, daemon <-> broker).
axum = { version = "0.8", default-features = false, features = ["ws", "tokio", "http1"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync", "signal", "time"] }
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
serde_json = "1"

[dev-dependencies]
# A plain WebSocket client to drive the broker end-to-end in integration tests.
# No TLS features: the tests speak ws:// over loopback.
tokio-tungstenite = "0.24"
