[package]
name = "allowlister-remote-daemon"
# Placeholder version; the real version is the release git tag (see plugin crate).
version = "0.0.0"
edition = "2021"
repository = "https://github.com/nickderobertis/allowlister-remote"

[lib]
name = "allowlister_remote_daemon"
path = "src/lib.rs"

[[bin]]
name = "allowlister-remote-daemon"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "time", "signal"] }
# WebSocket client to the broker. ws:// over the trusted transport for now; a
# wss:// TLS feature is a follow-up (see docs/design/realtime-sync.md).
tokio-tungstenite = "0.24"
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
serde_json = "1"

[dev-dependencies]
# End-to-end tests run a real broker in-process and drive the full chain.
allowlister-remote-broker = { path = "../allowlister-remote-broker" }
axum = { version = "0.8", default-features = false, features = ["ws", "tokio", "http1"] }
tokio-tungstenite = "0.24"
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
