[package]
name = "allowlister-remote-plugin"
version = "0.2.2"
edition = "2021"
repository = "https://github.com/nickderobertis/allowlister-remote"

[[bin]]
name = "allowlister-remote-plugin"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.12.28", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
